import static org.apache.tools.ant.taskdefs.condition.Os.*

plugins {
    id 'java'
    id 'application'
}

//configurations {
//    nativeLib
//}

version '1.0-SNAPSHOT'
project.ext.lwjglVersion = "3.2.2-SNAPSHOT"

sourceCompatibility = 1.11

repositories {
    maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
    mavenCentral()
}

application {
    mainClassName = 'com.battlezone.megamachines.networking.Server'
}

jar {
    manifest {
        attributes 'Main-Class': 'com.battlezone.megamachines.networking.Server'
    }
}

task client(dependsOn: 'classes', type: JavaExec) {
    main = 'com.battlezone.megamachines.Main'
    classpath = sourceSets.main.runtimeClasspath
    if (isFamily(FAMILY_MAC)) {
        jvmArgs = ["-XstartOnFirstThread", "-Djava.awt.headless=true", "-Dorg.lwjgl.util.Debug=true", "-Xlog:gc"]
    } else if (isFamily(FAMILY_WINDOWS)) {
        jvmArgs = ["-XX:+UnlockExperimentalVMOptions", "-Dorg.lwjgl.util.Debug=true", "-XX:+UseShenandoahGC", "-Xlog:gc"]
    } else {
        jvmArgs = ["-XX:+UnlockExperimentalVMOptions", "-Dorg.lwjgl.util.Debug=true", "-XX:+UseZGC", "-Xlog:gc"]
    }
}

task server(dependsOn: 'classes', type: JavaExec) {
    main = 'com.battlezone.megamachines.networking.server.Server'
    classpath = sourceSets.main.runtimeClasspath
    if (isFamily(FAMILY_MAC)) {
        jvmArgs = ["-XstartOnFirstThread", "-Djava.awt.headless=true", "-Dorg.lwjgl.util.Debug=true", "-Xlog:gc"]
    } else if (isFamily(FAMILY_WINDOWS)) {
        jvmArgs = ["-XX:+UnlockExperimentalVMOptions", "-Dorg.lwjgl.util.Debug=true", "-XX:+UseShenandoahGC", "-Xlog:gc"]
    } else {
        jvmArgs = ["-XX:+UnlockExperimentalVMOptions", "-Dorg.lwjgl.util.Debug=true", "-XX:+UseZGC", "-Xlog:gc"]
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.lwjgl', name: 'lwjgl', version: lwjglVersion
    compile group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjglVersion
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjglVersion
    compile group: 'org.lwjgl', name: 'lwjgl-openal', version: lwjglVersion
    compile group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjglVersion

    compile group: 'org.lwjgl', name: 'lwjgl', version: lwjglVersion, classifier: 'natives-windows'
    compile group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjglVersion, classifier: 'natives-windows'
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjglVersion, classifier: 'natives-windows'
    compile group: 'org.lwjgl', name: 'lwjgl-openal', version: lwjglVersion, classifier: 'natives-windows'
    compile group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjglVersion, classifier: 'natives-windows'

    compile group: 'org.lwjgl', name: 'lwjgl', version: lwjglVersion, classifier: 'natives-linux'
    compile group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjglVersion, classifier: 'natives-linux'
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjglVersion, classifier: 'natives-linux'
    compile group: 'org.lwjgl', name: 'lwjgl-openal', version: lwjglVersion, classifier: 'natives-linux'
    compile group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjglVersion, classifier: 'natives-linux'

    compile group: 'org.lwjgl', name: 'lwjgl', version: lwjglVersion, classifier: 'natives-macos'
    compile group: 'org.lwjgl', name: 'lwjgl-glfw', version: lwjglVersion, classifier: 'natives-macos'
    compile group: 'org.lwjgl', name: 'lwjgl-opengl', version: lwjglVersion, classifier: 'natives-macos'
    compile group: 'org.lwjgl', name: 'lwjgl-openal', version: lwjglVersion, classifier: 'natives-macos'
    compile group: 'org.lwjgl', name: 'lwjgl-stb', version: lwjglVersion, classifier: 'natives-macos'

    compile 'org.json:json:20180813'

}
